force-app/main/default/objects/Treinamento__c/Treinamento__c.object-meta.xml
<CustomObject>
    <description>Objeto de treinamentos realizados

Exemplos
Desenvolvimento declarativo
Desenvolvimento back-end
Desenvolvimento front-end</description>
    <label>Treinamento</label>
    <nameField>
        <label>Treinamento Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Treinamentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>