force-app/main/default/objects/Treinamento__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Define o status do treinamento</description>
    <inlineHelpText>Informe status do treinamento</inlineHelpText>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>