force-app/main/default/objects/Treinamento__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <description>Descrição longa do treinamento</description>
    <inlineHelpText>Informe a descrição do treinamento</inlineHelpText>
    <label>Descrição</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>