force-app/main/default/objects/Treinamento__c/fields/Instrutor__c.field-meta.xml
<CustomField>
    <fullName>Instrutor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Instrutor do curso</description>
    <inlineHelpText>Informe o nome instrutor do curso</inlineHelpText>
    <label>Instrutor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Treinamentos</relationshipName>
    <type>Lookup</type>
</CustomField>